--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@element-plus/nuxt": "^1.0.5",
     "@nuxtjs/google-fonts": "^3.0.0",
     "@rushstack/eslint-patch": "^1.3.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.16.12",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vueuse/core": "^10.1.2",
@@ -35,6 +36,8 @@
     "@trpc/client": "^10.30.0",
     "@trpc/server": "^10.30.0",
     "@vee-validate/nuxt": "^4.9.6",
+    "bcrypt": "^5.1.0",
+    "jose": "^4.14.4",
     "mongodb": "^5.5.0",
     "trpc-nuxt": "^0.10.5",
     "vee-validate": "^4.9.6",
